[package]
name = "json-position-parser"
version = "0.0.10"
authors = ["derjones <jones@freshx.de>"]
edition = "2018"
license = "MIT"
description = "A simple json parser with positions."
repository = "https://github.com/derjones/json-position-parser"

[profile.release]
lto = true

[dev-dependencies]
float-cmp = "0.6.0"
